# ta20260314

./: .clang-format  README.md
src/: CMakeLists.txt  aircraft.cpp  aircraft.hpp  aircraft_type.hpp  common_types.hpp  event_queue.cpp  event_queue.hpp  event_type.hpp  fault_model.cpp  fault_model.hpp  main.cpp  sequencer.cpp  sequencer.hpp  shared_resources.hpp  sim_entity.hpp  statistics.cpp  statistics.hpp  vertiport.cpp  vertiport.hpp
tdd/: CMakeLists.txt  main.cpp
tdd/tests/: test_aircraft.cpp  test_aircraft_type.cpp  test_event_queue.cpp  test_event_type.cpp  test_fault_model.cpp  test_foo.cpp  test_sequencer.cpp  test_statistics.cpp  test_vertiport.cpp
